Fix Trending section layout to align properly

--- a/src/components/home/Trending.scss
+++ b/src/components/home/Trending.scss
@@ -4,13 +4,12 @@
 @mixin trending-grid-column {
   display: grid;
   grid-template-columns: 1.8fr 2.2fr 5fr 1.8fr 1.8fr 1.5fr;
-  padding: 1rem 0rem 1rem 1rem;
+  padding: 1rem 0rem 1rem 1.4rem;
   column-gap: 0.8rem;
 }
 @mixin trending-grid-column-mobile {
   grid-template-columns: 1fr 0.9fr 0.9fr 0.7fr;
-  padding: 1rem 0rem 1rem 1.5rem;
-  column-gap: 0.8rem;
+  padding: 1rem 0rem 1rem 1.2rem;
 }
 
 #trending-title {
@@ -21,15 +20,8 @@
 
   @include media('>=phone', '<tablet') {
     @include trending-grid-column-mobile;
-    grid-template-columns: 1fr 0.9fr 0.9fr 0.7fr;
-    padding: 1.5rem 1rem 0.5rem 1rem;
-    column-gap: 0.8rem;
-    text-align: center;
     div:nth-child(1) {
       display: none;
-    }
-    div:nth-child(2) {
-      text-align: left;
     }
     div:nth-child(3) {
       display: none;
@@ -46,16 +38,9 @@
 
     @include media('>=phone', '<tablet') {
       @include trending-grid-column-mobile;
-      grid-template-columns: 1fr 0.9fr 0.9fr 0.7fr;
-      padding: 1rem 1rem;
       column-gap: 1rem;
-      text-align: center;
       #date {
         display: none;
-      }
-      p:nth-child(1) {
-        font-weight: 600;
-        text-align: left;
       }
       a:nth-child(3) {
         display: none;
